error 400 handling (wip)
